Adds anyOf support to requestBody
