# test-app/app/models/blog.rb
@@ -3,6 +3,9 @@
 class Blog < ActiveRecord::Base
   validates :content, presence: true
 
+  alias_attribute :headline, :title
+  alias_attribute :text, :content
+  
   def as_json(_options)
     {
       id: id,
